# agents

./: .gitignore  README.md  project.md  requirements.txt
app/: config.py  main.py  models.py  scheduler.py  token_store.py
app/templates/: base.html  dashboard.html  draft.html  settings.html
backend/: pyproject.toml
backend/app/agents/: classifier.py  draft_writer.py  llm_factory.py  summarizer.py
backend/app/services/: agent_service.py
email-agent/: claude.md
email-agent/backend/: .env.example  fix_db.py  run.py  test_flow.py  test_login.py  test_oauth.py
email-agent/backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py  middleware.py  models.py  security.py
email-agent/backend/app/agents/: classifier.py  draft_writer.py  graph.py  llm_factory.py  summarizer.py
email-agent/backend/app/routers/: auth.py  emails.py  health.py
email-agent/backend/app/services/: gmail_service.py
email-agent/frontend/: index.html
email-agent/frontend/src/: App.css  index.css
email-agent/frontend/src/components/: DraftPanel.css  EmailDetail.jsx  EmailList.css  EmailList.jsx  Header.jsx  Sidebar.css  Sidebar.jsx
email-agent/frontend/src/services/: api.js
frontend/src/: App.jsx
frontend/src/components/: DraftPanel.jsx  EmailDetail.css  Header.css
nvoids-job-agent/: README.md  project.md
nvoids-job-agent/app/: db.py  gmail_client.py  scraper.py  services.py
nvoids-job-agent/app/templates/: jobs.html
nvoids-job-agent/tests/: test_gmail_client.py  test_scraper.py
